# aws-nvidia-sample-robomaker-dino-detect

./: .gitignore  Makefile  Pipfile  README.md  config.json  dino-detect.py  push.sh  roboMakerSettings.json  roboMakerSettings.json.template
create_build_server/: create_build_server.sh
robot_ws/install/: local_setup.sh  setup.sh
robot_ws/install/cv_bridge/share/cv_bridge/: package.sh
robot_ws/install/cv_bridge/share/cv_bridge/cmake/: cv_bridge-extras.cmake  cv_bridgeConfig.cmake
robot_ws/install/dinobot/share/deploymentScripts/: pre_launch_file.sh
robot_ws/install/dinobot/share/dinobot/: package.sh
robot_ws/install/dinobot/share/dinobot/cmake/: dinobotConfig.cmake
robot_ws/install/dinobot/share/dinobot/launch/: start_search.launch
robot_ws/install/image_geometry/share/image_geometry/: package.sh
robot_ws/install/image_geometry/share/image_geometry/cmake/: image_geometryConfig.cmake
robot_ws/install/opencv_tests/share/opencv_tests/: package.sh
robot_ws/install/opencv_tests/share/opencv_tests/cmake/: opencv_testsConfig.cmake
robot_ws/install/vision_opencv/share/vision_opencv/: package.sh
robot_ws/log/: latest_build
robot_ws/src/dinobot/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/dinobot/deploymentScripts/: pre_launch_file.sh
robot_ws/src/dinobot/launch/: start_search.launch
robot_ws/src/dinobot/nodes/: camera  dino_detect  dino_detect_new  display  move  move_new  move_qwiic
robot_ws/src/dinobot/src/: jetbot_camera.cpp
robot_ws/src/hello_world_robot/: CMakeLists.txt
robot_ws/src/nvidia_jetbot/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/nvidia_jetbot/nodes/: dino_detect  display
robot_ws/src/nvidia_jetbot/src/: jetbot_camera.cpp
rosdeps/: dinobot.yaml
scripts/: README.md  dino-detect.py  generateCerts.sh  generate_greengrass_certs.sh  iot-policy.json  publish.sh
simulation_ws/src/jetbot/launch/: spawn_jetbot.launch
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/gazebo/launch/: main_with_objects.launch  osr_mars_world_object_world.launch  osr_spawn.launch
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/jetbot_description/: CMakeLists.txt  package.xml
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/jetbot_description/config/: jetbot_control.yaml
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/jetbot_description/launch/: display.launch  gazebo.launch  spawn.launch
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/jetbot_description/nodes/: motion
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/jetbot_description/rviz/: urdf.rviz
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/jetbot_description/urdf/: jetbot.urdf
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/jetbot_gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/jetbot_urdf_with_controllers_and_launch/jetbot_gazebo/launch/: jetbot_control.launch  jetbot_diff_drive_control.launch  jetbot_mars_world_object_world.launch  main_with_objects.launch  osr_mars_world_object_world.launch  osr_spawn.launch
