<?xml version="1.0"?>
<package format="2">
  <name>dinobot</name>
  <version>0.0.0</version>
  <description>
    NVidia Jetson Nano-based JetBot ROS Application
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
