<?xml version="1.0"?>
<package format="2">
  <name>dinobot</name>
  <version>0.0.0</version>
  <description>
    NVidia Jetson Nano-based JetBot ROS Application
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python-pytorch-pip</depend>
  <depend>python3-pil</depend>
  <depend>python3-numpy</depend>
  <depend>python-opencv</depend>
  <depend>python-paho-mqtt-pip</depend>
</package>
